--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~9.1.4",
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.4",
     "@angular/localize": "^9.1.6",
     "@angular/platform-browser": "~9.1.4",
@@ -22,6 +23,7 @@
     "@angular/router": "~9.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
